--- a/2fit/app.json
+++ b/2fit/app.json
@@ -25,7 +25,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "nl.oskr.n2fit"
     },
     "web": {
       "favicon": "./assets/favicon.png"
